<resources>
    <string name="app_name">Wego-Travel</string>
    <string name="Slogan">Explore the World with Ease!</string>
    <string name="labelEmail">Email</string>
    <string name="labelPassword">Password</string>
    <string name="labelLupaPassword">Lupa Password?</string>
    <string name="labelnama">Nama</string>
    <string name="labelalamat">Alamat</string>
    <string name="labelnotelepon">Nomor telepon</string>
    <string name="labeltanggallahir">Tanggal Lahir</string>
    <string name="labelretypepassword">Re-Type Password</string>
    <string name="nama_hotel">Nama Hotel</string>
    <string name="description">Description</string>
    <string name="labelNama">Nama</string>
    <string name="labelPria">Pria</string>
    <string name="labelWanita">Wanita</string>
    <string name="nama_pesawat">Nama Pesawat</string>

    <string name="labelhotel_nama">Nama : Hotel Astron</string>
    <string name="labelhotel_rating">Rating : *****</string>
    <string name="labelPesan">Pesan</string>

    <string name="labelpesawat_asal1">Asal : Bandung</string>
    <string name="labelpesawat_tujuan1">Tujuan : Singapura</string>
    <string name="labelpesawat_tanggal1">Tanggal : 20/04/2023</string>
    <string name="nama_kupon">Nama Kupon</string>
    <string name="status_kupon">Status Kupon</string>
    <string name="status_pemesanan">Status Pemesanan</string>
    <string name="nama_pesan_hotel">Nama :</string>
    <string name="tanggallahir_pesan_hotel">Tanggal Lahir :</string>
    <string name="pembayaran_pesan_hotel">Pembayaran :</string>
    <string name="durasi_menginap">Durasi Menginap :</string>
    <string name="voucher_pesan_hotel">Voucher :</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="ip_address">192.168.100.31</string>
    <string-array name="kota">
        <item>Bandung</item>
        <item>Bali</item>
        <item>Jakarta</item>
        <item>Jambi</item>
        <item>Sumba</item>
        <item>Surabaya</item>
    </string-array>
</resources>