<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/wegotravellogo"></ImageView>

        <TextView
            android:id="@+id/Slogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Slogan"
            android:textColor="@android:color/holo_blue_light"></TextView>

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="left"
            android:text="@string/labelEmail"
            android:textColor="@android:color/holo_blue_light"></TextView>

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="Email" />

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/labelPassword"
            android:textColor="@android:color/holo_blue_light"></TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:autofillHints="password"
            android:hint="Password"
            android:inputType="textPassword"></EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_nav_register"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_login_as_guest"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_as_guest"
                android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>