<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesanHotelActivity"
    android:id="@+id/action_cardview"
    android:layout_gravity="center"
    android:background="@drawable/backgroundapp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@color/cardview_light_background"
                android:layout_gravity="center">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/labelpesawat_asal1">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/labelpesawat_tujuan1"
                    android:textAllCaps="true"
                    android:layout_gravity="top">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/labelpesawat_tanggal1"
                    android:textAllCaps="true"
                    android:layout_gravity="top">
                </TextView>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/labelPesan"
                    android:layout_gravity="bottom"
                    ></Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>