<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    tools:context=".IsiDataPesanHotelActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/nama_pesan_hotel"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/nama_pesan_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/tanggallahir_pesan_hotel"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/tanggallahir_pesan_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>
        </LinearLayout>

        <TextView
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="Jenis Kelamin : "
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:id="@+id/pesan_hotel_gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="10sp">

            <RadioButton
                android:id="@+id/pesan_hotel_radio_button_pria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30sp"
                android:layout_weight="1"
                android:text="@string/labelPria" />

            <RadioButton
                android:id="@+id/pesan_hotel_radio_button_wanita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55sp"
                android:layout_weight="1"
                android:text="@string/labelWanita" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Tanggal Inap"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/tanggal_inap_pesan_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Lama Inap"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/lama_inap_pesan_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/voucher_pesan_hotel"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/voucher_pesan_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/pesan_hotel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="PESAN"
                android:textSize="12sp" />

            <Button
                android:id="@+id/batal_pesan_hotel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Batal"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>